--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -60,6 +60,11 @@ ktor-logging = { module = "io.ktor:ktor-client-logging", version.ref = "ktor"}
 
 koin-bom = { module = "io.insert-koin:koin-bom", version.ref = "koin-bom" }
 koin-core = { module = "io.insert-koin:koin-core" }
+koin-android = { module = "io.insert-koin:koin-android" }
+koin-androidx-viewmodel = { module = "io.insert-koin:koin-androidx-viewmodel" }
+koin-androidx-compose = { module = "io.insert-koin:koin-androidx-compose" }
+
+
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
