--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -21,7 +21,7 @@ kotlin-serialization-json = "1.9.0"
 ui-viewbinding = "1.9.4"
 kotlinx-datetime = "0.7.1"
 ktor = "3.3.2"
-koin-bom = "3.5.0"
+koin-bom = "3.5.6"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -61,8 +61,8 @@ ktor-logging = { module = "io.ktor:ktor-client-logging", version.ref = "ktor"}
 koin-bom = { module = "io.insert-koin:koin-bom", version.ref = "koin-bom" }
 koin-core = { module = "io.insert-koin:koin-core" }
 koin-android = { module = "io.insert-koin:koin-android" }
-koin-androidx-viewmodel = { module = "io.insert-koin:koin-androidx-viewmodel" }
 koin-androidx-compose = { module = "io.insert-koin:koin-androidx-compose" }
+koin-androidx-compose-navigation = { module = "io.insert-koin:koin-androidx-compose-navigation" }
 
 
 
