--- a/gradle.properties
+++ b/gradle.properties
@@ -23,4 +23,5 @@ kotlin.code.style=official
 android.nonTransitiveRClass=true
 org.gradle.caching=true
 org.gradle.parallel=true
+org.gradle.configuration-cache=true
 #org.gradle.caching.debug=true
