--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
             android:exported="false"
             tools:node="merge">
             <meta-data
-                android:name="io.insert.koin.androidx.startup.KoinInitializer"
+                android:name="org.koin.androix.startup.KoinInitializer"
                 android:value="androidx.startup" />
         </provider>
 
