--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,24 +1,24 @@
-name: Build and Release Kotlin App
+name: Build and Release LifeTrack2.0 App
 
 on:
   push:
     tags:
-      - 'v*' # Triggers on tags starting with v (e.g., v1.0, v2.1.4)
+      - 'v*' 
 
 jobs:
   build:
     runs-on: ubuntu-latest
     permissions:
-      contents: write # Essential for creating releases
+      contents: write
 
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
 
-      - name: Set up JDK 17
+      - name: Set up JDK 22
         uses: actions/setup-java@v4
         with:
-          java-version: '17'
+          java-version: '22'
           distribution: 'temurin'
           cache: 'gradle'
 
@@ -26,13 +26,11 @@ jobs:
         run: chmod +x gradlew
 
       - name: Build with Gradle
-        # For Android, use 'assembleRelease'. For desktop/server, use 'build' or 'jar'
         run: ./gradlew assembleRelease 
 
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
         with:
-          # Adjust path to match your actual build output
           files: |
             app/build/outputs/apk/release/*.apk
             build/libs/*.jar
