--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,7 +26,7 @@ jobs:
         run: chmod +x gradlew
 
       - name: Build Release Application
-        run: ./gradlew assembleRelease
+        run: ./gradlew assembleRelease --info
         env:
           GRADLE_OPTS: -Xmx4g -XX:MaxMetaspaceSize=512m
 
